Don't need the sphinx extension

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=5.6",
-        "ext-sphinx": "*"
+        "php": ">=5.6"
     },
     "version": "1.0.0"
 }
