--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "flexihash/flexihash": "^2.0.0",
+        "foolz/sphinxql-query-builder": "^1.1.0"
     },
     "version": "1.0.0"
 }
