--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 <IfModule mod_rewrite.c>
    RewriteEngine on
+   RewriteRule    ^health.php$ worker/health.php    [L]
    RewriteRule    ^$ worker/    [L]
    RewriteRule    (.*) worker/$1 [L]
 </IfModule>
